--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -34,6 +34,8 @@ jobs:
           body: Latest
           draft: false
           prerelease: false
+      - name: Log
+        run: ls
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
