--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: calc
-          path: dist/main.exe
+          path: dist/main
       - name: Create release
         id: create_release
         uses: actions/create-release@v1
@@ -35,7 +35,7 @@ jobs:
           draft: false
           prerelease: false
       - name: Log
-        run: ls
+        run: cd dist && ls
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -43,6 +43,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/main.exe
-          asset_name: calc.exe
+          asset_path: dist/main
+          asset_name: calc
           asset_content_type: application/zip
