--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -38,8 +38,6 @@ jobs:
           body: Latest
           draft: false
           prerelease: false
-      - name: Log
-        run: cd dist && ls
       - name: Upload release asset
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
@@ -47,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/main
+          asset_path: dist/main.exe
           asset_name: calc.exe
           asset_content_type: application/zip
